--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,8 @@ body {
   color: #555;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #fff;
 }
 
@@ -61,32 +62,41 @@ pre {
   border: 1px solid #ccc;
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
 }
-table{
+table {
   margin: 2 auto;
   font-size: 1em;
 }
 
-th, td {
+th,
+td {
   padding: 0.5em;
-  margin: 3 ;
+  margin: 3;
 }
 
 tr:nth-child(even) {
   background-color: rgb(202, 253, 255);
 }
-
+.add_employee {
+  max-width: 700px;
+  background-color: aliceblue;
+  padding: 50px;
+}
+.add_employee input {
+  width: 100%;
+}
 input {
   padding: 0.2em 0.6em;
   font-size: 1em;
   color: #444;
 }
 
-input[type="submit"],
-input[type="button"] {
+input[type='submit'],
+input[type='button'] {
   cursor: pointer;
 }
 
-section input[type="submit"], section input[type="button"] {
+section input[type='submit'],
+section input[type='button'] {
   width: 100%;
   margin-top: 0.5em;
 }
