--- a/includes/AddEmployee.html
+++ b/includes/AddEmployee.html
@@ -21,9 +21,10 @@
   </head>
   <body background="blue">
     <form name="add_employee" action="includes/AddEmployee.php" method="POST">
-      <table width="50%" border="0px" cellspacing="20" align="center">
+      <table width="75%" border="0px" cellspacing="20" align="center">
         <tr>
           <td>
+            <label>First Name:</label><br>
             <input
               name="first_name"
               required
@@ -35,6 +36,7 @@
         </tr>
         <tr>
           <td>
+            <label>Last Name:</label><br>
             <input
               name="last_name"
               placeholder="Last Name"
@@ -45,12 +47,14 @@
         </tr>
         <tr>
           <td>
-            <input name="email" placeholder="Email" id="email" type="email" />
+            <label>Email:</label><br>
+            <input name="email" placeholder="Email" id="type" type="email" />
           </td>
         </tr>
 
         <tr>
           <td>
+            <label>Phone:</label><br>
             <input
               name="phone_number"
               placeholder="Phone Number"
@@ -61,9 +65,10 @@
         </tr>
         <tr>
           <td>
+            <label>Hire Date:</label><br>
             <input
-              name="Hire Date"
-              placeholder="Hir Date"
+              name="hire_date"
+              placeholder="Hire Date"
               id="type"
               type="date"
             />
@@ -71,7 +76,32 @@
         </tr>
         <tr>
           <td>
+            <label>Job Id:</label><br>
+            <input name="job_id" placeholder="job id" id="type" type="number" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label>Salary:</label><br>
             <input name="Salary" placeholder="salary" id="type" type="number" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label>COMMISSION_PCT:</label><br>
+            <input name="COMMISSION_PCT" placeholder="COMMISSION_PCT" id="type" type="number" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label>MANAGER_ID:</label><br>
+            <input name="MANAGER_ID" placeholder="MANAGER_ID" id="type" type="number" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label>DEPARTMENT_ID:</label><br>
+            <input name="DEPARTMENT_ID" placeholder="DEPARTMENT_ID" id="type" type="number" />
           </td>
         </tr>
         <tr>
