--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,8 +63,9 @@ pre {
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
 }
 table {
-  margin: 2 auto;
+  margin: auto;
   font-size: 1em;
+  padding: 50px;
 }
 
 th,
@@ -73,37 +74,37 @@ td {
   margin: 3;
 }
 
-tr:nth-child(even) {
-  background-color: rgb(202, 253, 255);
-}
 .add_employee {
   max-width: 700px;
   background-color: aliceblue;
   padding: 50px;
 }
-.add_employee input {
+.add_employee input,select {
   width: 100%;
 }
-input {
+input,select {
   padding: 0.2em 0.6em;
   font-size: 1em;
   color: #444;
 }
 
+
 input[type='submit'],
 input[type='button'] {
   cursor: pointer;
 }
-
+label{
+  color: white;
+  margin-bottom: 10px;
+}
 section input[type='submit'],
 section input[type='button'] {
-  width: 100%;
+  /* width: 100%; */
   margin-top: 0.5em;
 }
 
 section form {
-  width: 100%;
-  max-width: 500px;
+  max-width: 75%;
   margin: 2em auto 0;
 }
 
@@ -115,8 +116,15 @@ section form {
 .form-group label {
   flex-basis: 30%;
 }
-
-.form-group input {
+.welcome{
+  padding: 50px;
+  text-align: center;
+  background-color: rgb(54, 128, 54);
+  color: white;
+  margin-top: 100px;
+  font-size: 20px;
+}
+.form-group input,select {
   flex-basis: 70%;
 }
 
