--- a/resources/css/style1.css
+++ b/resources/css/style1.css
@@ -9,7 +9,7 @@
         }
         #type
         {
-            width: 300px;
+            width: 100%;
             height: 32px;
             border: 0;
             outline: 0;
@@ -21,7 +21,7 @@
         }
         #button
         {
-            width: 100px;
+            /* width: 100px; */
             height: 30px;
             font-size: 10px white
             
