--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,9 +63,8 @@ pre {
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
 }
 table {
-  margin: auto;
+  margin: 2 auto;
   font-size: 1em;
-  padding: 50px;
 }
 
 th,
@@ -74,40 +73,87 @@ td {
   margin: 3;
 }
 
-.add_employee {
-  max-width: 700px;
-  background-color: aliceblue;
-  padding: 50px;
+tr:nth-child(even) {
+  background-color: rgb(202, 253, 255);
 }
-.add_employee input,select {
-  width: 100%;
-}
-input,select {
+
+input {
   padding: 0.2em 0.6em;
   font-size: 1em;
   color: #444;
 }
 
-
 input[type='submit'],
 input[type='button'] {
   cursor: pointer;
 }
-label{
-  color: white;
-  margin-bottom: 10px;
-}
+
 section input[type='submit'],
 section input[type='button'] {
-  /* width: 100%; */
+  width: 100%;
   margin-top: 0.5em;
 }
 
 section form {
-  max-width: 75%;
+  width: 100%;
+  max-width: 500px;
   margin: 2em auto 0;
 }
-
+.add_employee,
+.del_employee {
+  max-width: 900px;
+  margin: 0 auto;
+  font-size: 0.9em;
+  background-color: black;
+  border: 8px solid white;
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 0.5);
+}
+.del_employee {
+  max-width: 500px;
+}
+.add_employee tr,
+.del_employee tr {
+  background: none !important;
+}
+.add_employee input,
+.add_employee select,
+.del_employee select {
+  width: 100%;
+  padding: 0.2em 0.6em;
+  font-size: 1em;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #444;
+  color: white;
+}
+.add_employee select,
+.del_employee select {
+  color: #444;
+}
+label {
+  color: white;
+  text-align: left !important;
+}
+#add-button {
+  color: #444;
+  background: white;
+  padding: 10px;
+  width: 200px;
+}
+.welcome {
+  background-color: green;
+  padding: 100px;
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  margin-top: 100px;
+  text-align: center;
+}
+.welcome > div:first-child {
+  font-size: 30px;
+  font-weight: 700;
+}
 .form-group {
   display: flex;
   padding: 0.5em 0;
@@ -116,15 +162,8 @@ section form {
 .form-group label {
   flex-basis: 30%;
 }
-.welcome{
-  padding: 50px;
-  text-align: center;
-  background-color: rgb(54, 128, 54);
-  color: white;
-  margin-top: 100px;
-  font-size: 20px;
-}
-.form-group input,select {
+
+.form-group input {
   flex-basis: 70%;
 }
 
